--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "minnow",
-	"version": "0.2.16",
+	"version": "0.2.17",
 	"description": "An auto-syncing, in-memory-canonical relational database",
 	"main": "./index",
 	"author": "Liam Doherty",
@@ -16,7 +16,9 @@
 		"structures": "git://github.com/lfdoherty/structures.git",
 		"underscorem": "git://github.com/lfdoherty/underscorem.git",
 		"fparse": "git://github.com/lfdoherty/fparse.git",
-		"quicklog": "git://github.com/lfdoherty/quicklog.git"
+		"quicklog": "git://github.com/lfdoherty/quicklog.git",
+		"xmlhttprequest": ">=1.4.2",
+		"ws": ">=0.4.21"
 	},
 	"devDependencies": {
 		"cover": ">=0.2.8"
